<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title="@string/app_name"
        app:titleTextColor="@color/colorWhite" />.

    <TextView
        android:id="@+id/question_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:text="@string/question_info"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/imageGas"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/gasolina" />

    <EditText
        android:id="@+id/editTextGas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/hidden_sugestion_gas"
        android:inputType="numberDecimal" />

    <ImageView
        android:id="@+id/imageEthanol"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/etanol" />

    <EditText
        android:id="@+id/editTextEthanol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/hidden_sugestion_ethanol"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/calc_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/compare" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/result"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/imageResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/empty_dice"
        tools:src="@drawable/abasteca_etanol" />

</LinearLayout>